website/editor/src/styles.css
:root {
  --gutter: 30px;
  --link-color: #007eff;
  --text-color: #333;
  --error-color: #fff0f0;
  --outline-width: 200px;
  --right-panel-width: 1fr;
  --console-height: 1fr;
}

.CodeMirror-lint-tooltip {
  z-index: 10000 !important;
}

@keyframes fadein {
  0% {
    opacity: 0;
    visibility: hidden;
  }
  100% {
    opacity: 1;
  }
}

.type-hover {
  z-index: 50;
  border: 1px solid #c8c8c8;
  background-color: #f3f3f3;
  user-select: text;
  box-sizing: initial;
  animation: fadein 0.1s linear;
  line-height: 1.5em;
  overflow: hidden;
  cursor: default;
  padding: 4px 8px;
  visibility: hidden;
  opacity: 0;
}

.navPusher {
  height: 100%;
}

@font-face {
  font-family: 'Fira Code VF';
  src: url('font.woff2') format('woff2-variations');
  font-weight: 300 700;
  font-style: normal;
}

.CodeMirror span {
  font-family: 'Fira Code VF', sans-serif;
}

body {
  overscroll-behavior: none;
  margin: 0;
  padding: 0;
  height: 100vh;
  -webkit-overflow-scrolling: touch;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
}

#version {
  font-size: 0.5em;
  line-height: 0;
  color: #fffc;
}

#version a {
  color: inherit;
  display: inline;
}

#try-wrapper {
  display: grid;
}

/* .stats > div {
  flex: 1;
  padding: 10px;
  border-right: 1px solid #ddd;
} */

.editor {
  border-left: 1px solid #ddd;
}

.sources {
  display: grid;
  grid-template-rows: 1fr auto;
}
.graphite {
  border-bottom: 1px solid #ddd;
}

.editor.results {
}

.dom {
  border-left: 1px solid #ddd;
  border-bottom: 1px solid #ddd;
  background-color: #fff;
  overflow: auto;
}

.dom iframe {
  width: 100%;
  height: 100%;
}

.console > :first-child {
  border-top: 1px solid #fff;
}

.errors {
  margin: 0;
  margin-top: 6px;
  padding: 1rem;
  display: flex;
  flex-direction: column;
}
.errors.has-errors {
  z-index: 20;
  background-color: var(--error-color);
  border-left: 1px solid #ffd6d6;
  color: #f00;
}

.errors.no-errors {
  opacity: 0.5;
  z-index: -20;
}

@media (max-width: 699px) {
  .layout-sizer {
    display: none;
  }
  .navPusher {
    min-height: calc(100vh - 100px);
  }
  #try-wrapper {
    width: 100vw;
    overflow-x: hidden;
    scroll-snap-type: mandatory;
    grid-template-rows: 50px auto repeat(7, minmax(100px, 33vh)) auto repeat(
        3,
        minmax(100px, 33vh)
      );
  }
  .header-tabs {
    grid-column: 1 / span 1;
    grid-row: 2 / span 1;
  }
  .sources {
    grid-column: 1 / span 1;
    grid-row: 3 / span 7;
  }
  .dom {
    border-top: 1px solid #ddd;
    grid-column: 1 / span 1;
    grid-row: 3 / span 7;
  }
  .editor.results {
    border-top: 1px solid #ddd;
    grid-column: 1 / span 1;
    grid-row: 3 / span 7;
  }
  .errors {
    grid-column: 1 / span 1;
    grid-row: 1 / span 2;
    border-bottom: 1px solid #ffd6d6;
    margin-top: 86px;
  }
}
@media (min-width: 700px) {
  .layout-sizer {
    display: block;
  }
  #try-wrapper {
    overflow: hidden;
    grid-template-columns: var(--outline-width) minmax(200px, 2fr) var(--right-panel-width);
    grid-template-rows: 50px 36px repeat(2, minmax(100px, 1fr)) var(--console-height);
  }
  .header-tabs {
    grid-column: 3 / span 1;
    grid-row: 2 / span 1;
  }
  .dom {
    grid-column: 3 / span 1;
    grid-row: 3 / span 2;
  }
  .sources {
    grid-column: 2 / span 1;
    grid-row: 1 / span 5;
  }

  .editor.results {
    grid-column: 3 / span 1;
    grid-row: 2 / span 3;
  }

  .errors {
    grid-column: 3 / span 1;
    grid-row: 5 / span 1;
  }
}

.page-header {
  height: 40px;
  padding: 0.5rem 1.5rem;
  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
  display: flex;
  justify-content: flex-end !important;
}

.page-title {
  margin-right: auto !important;
}

.page-title .subtitle {
  color: rgba(0, 0, 0, 0.5);
  font-size: 1.5rem;
}

.octicon {
  display: inline-block;
  vertical-align: text-top !important;
  fill: currentColor;
}

.nav-link {
  color: rgba(0, 0, 0, 0.5);
  display: block;
  padding: 0.5rem 1rem;
}
.nav-link:hover {
  color: rgba(0, 0, 0, 0.7);
  text-decoration: none;
}
.view-gituhb {
  display: inline !important;
}

.editor {
  box-sizing: border-box;
  display: flex;
  flex: 1 1 50%;
  position: relative;
}

.CodeMirror {
  height: auto;
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  line-height: 1.6;
}

h1,
h2,
h3 {
  font-weight: 500;
  line-height: 1;
  margin-top: 0;
}

.page-body {
  padding: var(--gutter) 0;
  height: 100%;
}

.navigationSlider .slidingNav ul li a {
  font-weight: normal;
}

